Update Falcon Logscale Self Hosted Clusters Set Up Guide README.md